# System-Monitor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: process.h  processor.h
src/: format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: test.cpp
